--- a/pages/Style.scss
+++ b/pages/Style.scss
@@ -1137,6 +1137,31 @@ $primary: #EBAB07;
 		}
 	}
 
+	.itemHome5Secret {
+		display: none;
+		grid-column-start: 1;
+		grid-column-end: 4;
+		background-color: #181818;
+
+		@media screen and (max-width: 500px) {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		.programmTeacher {
+			font-family: 'Mulish';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 20px;
+			line-height: 130%;
+			display: flex;
+			align-items: center;
+			color: #FFFFFF;
+			margin-top: 46px;
+		}
+	}
+
 	.itemHome5 {
 		grid-column-start: 1;
 		grid-column-end: 4;
@@ -1147,6 +1172,10 @@ $primary: #EBAB07;
 
 		@media screen and (max-width: 1000px) {
 			background-image: url('../components/img/15.png');
+		}
+
+		@media screen and (max-width: 500px) {
+			display: none;
 		}
 
 		.methodWorks {
