--- a/App.scss
+++ b/App.scss
@@ -101,6 +101,12 @@ button {
 	width: 100%;
 	height: 100%;
 	display: none;
+
+	@media screen and (max-width: 500px) {
+		width: 150%;
+		margin-left: -20%;
+		height: 140%;
+	}
 }
 
 .content h2 {
@@ -207,6 +213,10 @@ button {
 			margin-top: -460px;
 			margin-left: -70px;
 			z-index: 0;
+		}
+
+		@media screen and (max-width: 500px) {
+			height: 1100px;
 		}
 	}
 
@@ -507,6 +517,11 @@ button {
 		font-size: 20px;
 		line-height: 25px;
 		color: #422F01;
+
+		@media screen and (max-width: 500px) {
+			width: 70%;
+			margin-left: -25%;
+		}
 	}
 
 	
