--- a/components/questions/Style.scss
+++ b/components/questions/Style.scss
@@ -35,6 +35,10 @@
 				text-align: center;
 				color: #FFFFFF;
 				margin-left: 15px;
+
+				@media screen and (max-width: 500px) {
+					text-align: left;
+				}
 			}
 
 			.btnPlus {
