--- a/pages/Style.scss
+++ b/pages/Style.scss
@@ -30,7 +30,7 @@ $primary: #EBAB07;
 	}
 
 	@media screen and (max-width: 500px) {
-		grid-template-rows: 890px 470px 1389px 587px 1300px 1600px 120px 700px 600px 900px 6400px 1000px 900px 289px;
+		grid-template-rows: 890px 470px 1389px 587px 1300px 1600px 120px 700px 600px 900px 6400px 1000px 900px 789px;
 	}
 
 	.itemHome1 {
@@ -1736,15 +1736,102 @@ $primary: #EBAB07;
 		}
 	}
 
+	.itemHome14Secret {
+		display: none;
+
+		@media screen and (max-width: 500px) {
+			display: block;
+			background-color: #000000;
+			grid-column-start: 1;
+			grid-column-end: 4;
+		}
+
+		.blockTwoItemHome14S {
+			
+			.textDogovorPublicAffertsS {
+				color: rgb(248, 181, 11, 1);
+				font-family: Mulish;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 142%;
+				text-decoration-line: underline;
+				margin-top: 30px;
+				margin-left: 16px;
+			}
+
+			.textDogovorPublicAffertsSTwo {
+				color: #f6ff00;
+				font-family: Mulish;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 142%;
+				text-decoration-line: underline;
+				margin-left: 16px;
+				margin-top: 12px;
+			}
+
+			.textTelegaS {
+				color: #FFF;
+				font-family: Mulish;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 130%;
+				margin-left: 16px;
+				margin-top: 12px;
+			}
+
+			.textlinkTelega {
+				color: #FFF;
+				font-family: Mulish;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 142%;
+				text-decoration-line: underline;
+				margin-left: 16px;
+				margin-top: 12px;
+			}
+
+			.textEmailS {
+				color: #FFF;
+				font-family: Mulish;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 142%;
+				margin-left: 16px;
+				margin-top: 12px;
+			}
+
+			.supportBlockOneS {
+
+				.supportTextS {
+					
+				}
+			}
+		}	
+	}
+
 	.itemHome14 {
 		grid-column-start: 1;
 		grid-column-end: 4;
 		background-color: #000000;
 		display: flex;
 
+		@media screen and (max-width: 500px) {
+			display: none;
+		}
+
 		.blockOneItemHome14 {
 			width: 33%;
 			margin-left: 130px;
+
+			@media screen and (max-width: 500px) {
+				margin-left: 60px;
+			}
 
 			.suportText {
 				font-family: 'Mulish';
@@ -1756,6 +1843,7 @@ $primary: #EBAB07;
 				align-items: center;
 				color: #FFFFFF;
 				margin-top: 34px;
+				
 			}
 		}
 
@@ -2039,4 +2127,15 @@ $primary: #EBAB07;
 		display: block;
 		margin-left: 50px;
 	}
+}
+
+.suportTextS{ 
+	color: #FFF;
+	font-family: Mulish;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 142%;
+	margin-left: 16px;
+	margin-top: 12px;
 }
