--- a/App.scss
+++ b/App.scss
@@ -44,6 +44,26 @@ body {
 	}
 }
 
+.tabsS {
+	padding: 15px;
+	text-align: center;
+	width: 91%;
+	background: rgba(128, 128, 128, 0);
+	cursor: pointer;
+	box-sizing: content-box;
+	position: relative;
+	outline: none;
+	color: #fff;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 20px;
+	cursor: pointer;
+	border: none;
+	background-color: #000000;
+}
+
 .tabs {
 	padding: 15px;
 	text-align: center;
@@ -63,7 +83,12 @@ body {
 	border: none;
 }
 
-
+.active-tabsS {
+	background: white;
+	color: #222;
+	border: none;
+	border-radius: 10 10 0 0;
+}
 
 .active-tabs {
 	background: white;
@@ -526,14 +551,15 @@ button {
 	padding-left: 20px;
 	font-size: 26px;
 	font-family: 'Mulish';
-	background-color: yellow;
+	background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
 	border-radius: 10px;
 }
 
 .absoluteBtn {
 	width: 60%;
-	height: 500px;
-	background-color: rgb(255, 242, 0);
+	height: 200px;
+	background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
 	margin-left: -18%;
 	border-radius: 10px;
+	overflow-y: auto;
 }
