commit bags Marcel block

--- a/App.scss
+++ b/App.scss
@@ -563,20 +563,27 @@ button {
 	}
 }
 
-.selectProg {
-	width: 60%;
-	height: 60px;
-	text-align: left;
-	padding-left: 20px;
-	font-size: 26px;
-	font-family: 'Mulish';
-	background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
-	border-radius: 10px;
+.btnSelectMenuBar {
+	display: flex;
+	
 
-	.selectModuleBtn {
-		display: flex;
+	.selectProg {
+		width: 60%;
+		height: 60px;
+		text-align: left;
+		padding-left: 20px;
+		font-size: 26px;
+		font-family: 'Mulish';
+		background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
+		border-radius: 10px;
+	
+		.selectModuleBtn {
+			display: flex;
+		}
 	}
 }
+
+
 
 .absoluteBtn {
 	width: 60%;
