--- a/App.scss
+++ b/App.scss
@@ -65,9 +65,9 @@ body {
 }
 
 .tabsS {
-	padding: 15px;
+	height: 60px;
 	text-align: center;
-	width: 91%;
+	width: 100%;
 	background: rgba(128, 128, 128, 0);
 	cursor: pointer;
 	box-sizing: content-box;
@@ -589,15 +589,26 @@ button {
 
 
 .absoluteBtn {
-	width: 60%;
+	width: 100%;
 	height: 200px;
 	background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
-	margin-left: -18%;
 	border-radius: 10px;
 	overflow-y: auto;
 }
 
 
 .blockDivTest {
-	background-color: #F8B50B;
+	background-color: #f8b50b00;
+
+	.selectProg {
+		width: 100%;
+		height: 60px;
+		font-size: 24px;
+		background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
+		border-radius: 10px;
+	}
+
+	.blockSecretSelect {
+
+	}
 }
