--- a/pages/Style.scss
+++ b/pages/Style.scss
@@ -2024,6 +2024,10 @@ $primary: #EBAB07;
 
 	.swiperContainer {
 		width: 100%;
+
+		.swiper-button-prev {
+			background-color: red;
+		}
 	}
 
 	.blockFotoStudents {
