--- a/pages/Style.scss
+++ b/pages/Style.scss
@@ -2025,7 +2025,7 @@ $primary: #EBAB07;
 	.swiperContainer {
 		width: 100%;
 
-		.swiper-button-prev {
+		.swiper-button-prev swiper-button-disabled{
 			background-color: red;
 		}
 	}
