--- a/components/questions/Style.scss
+++ b/components/questions/Style.scss
@@ -16,66 +16,105 @@
 		width: 100%;
 		background-color: rgba(0, 255, 255, 0);
 
-		.questionText {
-			display: flex;	
-			background-color: rgba(229, 255, 0, 0);
-			width: 80%;
-			margin-left: 10%;
-			height: 96px;
-
-			.textQuestions {
-				width: 96%;
-				font-family: 'Mulish';
-				font-style: normal;
-				font-weight: 400;
-				font-size: 18px;
-				line-height: 142%;
-				display: flex;
-				align-items: center;
-				text-align: center;
-				color: #FFFFFF;
-				margin-left: 15px;
-
-				@media screen and (max-width: 800px) {
-					text-align: left;
-				}
-			}
-
-			.btnPlus {
-				width: 36px;
-				height: 36px;
-				background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
-				border-radius: 4px;
-				color: #1F1F1F;
-				font-size: 30px;
-				margin-top: 31px;
-				margin-right: 31px;
-			}
-
-			
-		}
-		.textAreu {
-			width: 65%;
-			font-family: 'Mulish';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 18px;
-			line-height: 142%;
-			display: flex;
-			color: #FFFFFF;
-			margin-left: 11%;
-			margin-top: 1px;
-			margin-bottom: 20px;
-		}
-
-		.lineBottom {
-			width: 80%;
-			margin-left: 10%;
-			border: none;
-			background-color: white;
-			height: 2px;
-		} 	
+	
 	}
 	
 	
+}
+
+.questionText {
+	display: flex;	
+	background-color: rgba(229, 255, 0, 0);
+	width: 80%;
+	margin-left: 10%;
+	height: 96px;
+	flex-direction: column;
+
+	.textQuestions {
+		width: 96%;
+		font-family: 'Mulish';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 18px;
+		line-height: 142%;
+		display: flex;
+		align-items: center;
+		text-align: center;
+		color: #FFFFFF;
+		margin-left: 15px;
+
+		@media screen and (max-width: 800px) {
+			text-align: left;
+		}
+	}
+
+
+}
+
+
+.textAreu {
+	width: 75%;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 142%;
+	display: flex;
+	color: #FFFFFF;
+	margin-left: 11%;
+	margin-top: 31px;
+	margin-bottom: 20px;
+}
+
+.lineBottom {
+	width: 80%;
+	margin-left: 10%;
+	border: none;
+	background-color: white;
+	height: 2px;
+} 	
+
+
+.blockContent {
+	display: flex;
+	text-align: left;
+	background-color: #1f1f1f00;
+}
+
+.btnPlus {
+	width: 36px;
+	height: 36px;
+	background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
+	border-radius: 4px;
+	color: #1F1F1F;
+	font-size: 30px;
+	margin-top: 20px;
+}
+
+.blocOutSecretQuestions {
+	margin-top: 90px;
+}
+
+.textPlus {
+	transition: 0.2s;
+}
+
+.textPlus-active {
+	transform: rotate(45deg);
+	margin-left: 2px;
+	transition: 0.2s;
+}
+
+.textSecret {
+	width: 75%;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 142%;
+	display: flex;
+	color: #FFFFFF;
+	margin-left: 11%;
+	margin-top: 1px;
+	margin-bottom: 20px;
 }
