--- a/pages/Style.scss
+++ b/pages/Style.scss
@@ -195,7 +195,7 @@ $primary: #EBAB07;
 				}
 
 				@media screen and (max-width: 800px) {
-					width: 70%;
+					width: 60%;
 					top: 600px;
 					left: 190px;
 				}
@@ -505,6 +505,7 @@ $primary: #EBAB07;
 
 				@media screen and (max-width: 800px) {
 					margin-top: 34px;
+					background-color: #0031e3;
 				}
 			}
 
